修正と2つ目の課題

--- a/SCSS練習/index.html
+++ b/SCSS練習/index.html
@@ -33,6 +33,82 @@
                 </ul>
             </div>
         </div>
+        <div>
+            <h2 class="main-title">プランを選ぶ</h2>
+            <p class="sub-title">スマホ、スピーカー、その他デバイスから、制限なしで楽しめます</p>
+            <div class="premium-plan">
+                <ul class="premium-list">
+                    <div class="list-content">
+                        <li class="detail">
+                            <div class="detail-icon">1 ヶ月無料</div>
+                            <p><strong>Standard</strong><br>その後は、月額￥980<br>1つのアカウント</p>
+                            <hr class="sep">
+                        </li>
+                        <ul class="point">
+                            <li>広告なしで音楽を聴こう。</li>
+                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
+                            <li>オンデマンドプレイバック</li>
+                        </ul>
+                        <div class="btn">
+                            <a href="#">
+                            <button>使ってみる</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="list-content">
+                        <li class="detail">
+                            <div class="detail-icon">1 ヶ月無料</div>
+                            <p><strong>Duo</strong><br>その後は、月額￥1280<br>2つのアカウント</p>
+                            <hr class="sep">
+                        </li>
+                        <ul class="point">
+                            <li>広告なしで音楽を聴こう。</li>
+                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
+                            <li>オンデマンドプレイバック</li>
+                        </ul>
+                        <div class="btn">
+                            <a href="#">
+                                <button>使ってみる</button>
+                                </a>
+                        </div>
+                    </div>
+                    <div class="list-content">
+                        <li class="detail">
+                            <div class="detail-icon">1 ヶ月無料</div>
+                            <p><strong>Family</strong><br>その後は、月額￥1480<br>最大6つのPremiumアカウント</p>
+                            <hr class="sep">
+                        </li>
+                        <ul class="point">
+                            <li>広告なしで音楽を聴こう。</li>
+                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
+                            <li>オンデマンドプレイバック</li>
+                        </ul>
+                        <div class="btn">
+                            <a href="#">
+                                <button>使ってみる</button>
+                                </a>
+                        </div>
+                    </div>
+                    <div class="list-content">
+                        <li class="detail">
+                            <div class="detail-icon">1 ヶ月無料</div>
+                            <p><strong>Student</strong><br>その後は、月額￥480<br>1つのアカウント</p>
+                            <hr class="sep">
+                        </li>
+                        <ul class="point">
+                            <li>広告なしで音楽を聴こう。</li>
+                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
+                            <li>オンデマンドプレイバック</li>
+                        </ul>
+                        <div class="btn">
+                            <a href="#">
+                                <button>使ってみる</button>
+                                </a>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
