--- a/SCSS練習/index.html
+++ b/SCSS練習/index.html
@@ -37,11 +37,41 @@
             <h2 class="main-title">プランを選ぶ</h2>
             <p class="sub-title">スマホ、スピーカー、その他デバイスから、制限なしで楽しめます</p>
             <div class="premium-plan">
-                <ul class="premium-list">
-                    <div class="list-content">
+                <div class="premium-list">
+                    <ul class="list-content">
                         <li class="detail">
                             <div class="detail-icon">1 ヶ月無料</div>
-                            <p><strong>Standard</strong><br>その後は、月額￥980<br>1つのアカウント</p>
+                            <p><span>Standard</span><br>その後は、月額￥980<br>1つのアカウント</p>
+                            <div class="sep">
+                        </li>
+                        <ul class="point">
+                            <li>広告なしで音楽を聴こう。</li>
+                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
+                            <li>オンデマンドプレイバック</li>
+                        </ul>
+                        <div class="btn">
+                            <button type="button">使ってみる</button>
+                        </div>
+                    </ul>
+                    <ul class="list-content">
+                        <li class="detail">
+                            <div class="detail-icon">1 ヶ月無料</div>
+                            <p><span>Duo</span><br>その後は、月額￥1280<br>2つのアカウント</p>
+                            <div class="sep"></div>
+                        </li>
+                        <ul class="point">
+                            <li>広告なしで音楽を聴こう。</li>
+                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
+                            <li>オンデマンドプレイバック</li>
+                        </ul>
+                        <div class="btn">
+                            <button type="button">使ってみる</button>
+                        </div>
+                    </ul>
+                    <ul class="list-content">
+                        <li class="detail">
+                            <div class="detail-icon">1 ヶ月無料</div>
+                            <p><span>Family</span><br>その後は、月額￥1480<br>最大6つのPremiumアカウント</p>
                             <hr class="sep">
                         </li>
                         <ul class="point">
@@ -50,16 +80,14 @@
                             <li>オンデマンドプレイバック</li>
                         </ul>
                         <div class="btn">
-                            <a href="#">
-                            <button>使ってみる</button>
-                            </a>
+                            <button type="button">使ってみる</button>
                         </div>
-                    </div>
-                    <div class="list-content">
+                    </ul>
+                    <ul class="list-content">
                         <li class="detail">
                             <div class="detail-icon">1 ヶ月無料</div>
-                            <p><strong>Duo</strong><br>その後は、月額￥1280<br>2つのアカウント</p>
-                            <hr class="sep">
+                            <p><span>Student</span><br>その後は、月額￥480<br>1つのアカウント</p>
+                            <div class="sep"></div>
                         </li>
                         <ul class="point">
                             <li>広告なしで音楽を聴こう。</li>
@@ -67,46 +95,10 @@
                             <li>オンデマンドプレイバック</li>
                         </ul>
                         <div class="btn">
-                            <a href="#">
-                                <button>使ってみる</button>
-                                </a>
+                            <button type="button">使ってみる</button>
                         </div>
-                    </div>
-                    <div class="list-content">
-                        <li class="detail">
-                            <div class="detail-icon">1 ヶ月無料</div>
-                            <p><strong>Family</strong><br>その後は、月額￥1480<br>最大6つのPremiumアカウント</p>
-                            <hr class="sep">
-                        </li>
-                        <ul class="point">
-                            <li>広告なしで音楽を聴こう。</li>
-                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
-                            <li>オンデマンドプレイバック</li>
-                        </ul>
-                        <div class="btn">
-                            <a href="#">
-                                <button>使ってみる</button>
-                                </a>
-                        </div>
-                    </div>
-                    <div class="list-content">
-                        <li class="detail">
-                            <div class="detail-icon">1 ヶ月無料</div>
-                            <p><strong>Student</strong><br>その後は、月額￥480<br>1つのアカウント</p>
-                            <hr class="sep">
-                        </li>
-                        <ul class="point">
-                            <li>広告なしで音楽を聴こう。</li>
-                            <li>好きな場所で聴こう - オフラインでも楽しもう</li>
-                            <li>オンデマンドプレイバック</li>
-                        </ul>
-                        <div class="btn">
-                            <a href="#">
-                                <button>使ってみる</button>
-                                </a>
-                        </div>
-                    </div>
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
