--- a/SCSS練習/index.html
+++ b/SCSS練習/index.html
@@ -37,8 +37,8 @@
             <h2 class="main-title">プランを選ぶ</h2>
             <p class="sub-title">スマホ、スピーカー、その他デバイスから、制限なしで楽しめます</p>
             <div class="premium-plan">
-                <div class="premium-list">
-                    <ul class="list-content">
+                <div class="list-content">
+                    <ul>
                         <li class="detail">
                             <div class="detail-icon">1 ヶ月無料</div>
                             <p><span>Standard</span><br>その後は、月額￥980<br>1つのアカウント</p>
@@ -49,11 +49,13 @@
                             <li>好きな場所で聴こう - オフラインでも楽しもう</li>
                             <li>オンデマンドプレイバック</li>
                         </ul>
-                        <div class="btn">
-                            <button type="button">使ってみる</button>
-                        </div>
                     </ul>
-                    <ul class="list-content">
+                    <div class="btn">
+                        <a link="#" class="button">使ってみる</a>
+                    </div>
+                </div>
+                <div class="list-content">
+                    <ul>
                         <li class="detail">
                             <div class="detail-icon">1 ヶ月無料</div>
                             <p><span>Duo</span><br>その後は、月額￥1280<br>2つのアカウント</p>
@@ -64,26 +66,30 @@
                             <li>好きな場所で聴こう - オフラインでも楽しもう</li>
                             <li>オンデマンドプレイバック</li>
                         </ul>
-                        <div class="btn">
-                            <button type="button">使ってみる</button>
-                        </div>
                     </ul>
-                    <ul class="list-content">
+                    <div class="btn">
+                        <a link="#" class="button">使ってみる</a>
+                    </div>
+                </div>
+                <div class="list-content">
+                    <ul>
                         <li class="detail">
                             <div class="detail-icon">1 ヶ月無料</div>
                             <p><span>Family</span><br>その後は、月額￥1480<br>最大6つのPremiumアカウント</p>
-                            <hr class="sep">
+                            <div class="sep"></div>
                         </li>
                         <ul class="point">
                             <li>広告なしで音楽を聴こう。</li>
                             <li>好きな場所で聴こう - オフラインでも楽しもう</li>
                             <li>オンデマンドプレイバック</li>
                         </ul>
-                        <div class="btn">
-                            <button type="button">使ってみる</button>
-                        </div>
                     </ul>
-                    <ul class="list-content">
+                    <div class="btn">
+                        <a link="#" class="button">使ってみる</a>
+                    </div>
+                </div>
+                <div class="list-content">
+                    <ul>
                         <li class="detail">
                             <div class="detail-icon">1 ヶ月無料</div>
                             <p><span>Student</span><br>その後は、月額￥480<br>1つのアカウント</p>
@@ -94,10 +100,10 @@
                             <li>好きな場所で聴こう - オフラインでも楽しもう</li>
                             <li>オンデマンドプレイバック</li>
                         </ul>
-                        <div class="btn">
-                            <button type="button">使ってみる</button>
-                        </div>
                     </ul>
+                    <div class="btn">
+                        <a link="#" class="button">使ってみる</a>
+                    </div>
                 </div>
             </div>
         </div>
