--- a/SCSS練習/index.html
+++ b/SCSS練習/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mixin.css">
 </head>
 <body>
     <header></header>
